--- a/app/assets/javascripts/app/routes/activitiesFormView.html
+++ b/app/assets/javascripts/app/routes/activitiesFormView.html
@@ -1,1 +1,40 @@
-item form
+<div class="container-fluid">
+  <div class="row">
+    <span class="loader" ng-show="!ctrl.fullyLoaded" style="float: left; margin: 0px 0px 0px 8px;">Loading...</span>
+  </div>
+  <div class="row">
+    <div>Order ID:</div>
+    <input type="text" name="name" value="{{ctrl.itemFormView.Order_ID}}">
+  </div>
+  <div class="row">
+    <div>Work Order Number:</div>
+    <input type="text" name="name" value="{{ctrl.itemFormView.WorkOrder_WorkOrderNr}}">
+  </div>
+  <div class="row">
+    <div>Customer Name:</div>
+    <input type="text" name="name" value="{{ctrl.itemFormView.Customer_CustomerName}}">
+  </div>
+  <div class="row">
+    <div>Customer Work City:</div>
+    <input type="text" name="name" value="{{ctrl.itemFormView.Customer_WorkCity}}">
+  </div>
+  <div class="row">
+    <div>RPU Address:</div>
+    <input type="text" name="name" value="{{ctrl.itemFormView.RPU_Address}}">
+  </div>
+  <div class="row">
+    <div>RPU Zip Code:</div>
+    <input type="text" name="name" value="{{ctrl.itemFormView.RPU_ZipCode}}">
+  </div>
+  <div class="row">
+    <div>RPU City:</div>
+    <input type="text" name="name" value="{{ctrl.itemFormView.RPU_City}}">
+  </div>
+  <div class="row">
+    <hr>
+  </div>
+  <div class="row">
+    <button class="btn" ng-click="ctrl.closeDialog()">Save</button>
+    <button class="btn" ng-click="ctrl.closeDialog()">Cancel</button>
+  </div>
+</div>
