--- a/app/assets/javascripts/app/routes/activitiesFormView.html
+++ b/app/assets/javascripts/app/routes/activitiesFormView.html
@@ -1,40 +1,44 @@
 <div class="container-fluid">
   <div class="row">
-    <span class="loader" ng-show="!ctrl.fullyLoaded" style="float: left; margin: 0px 0px 0px 8px;">Loading...</span>
+    <div class="col-xs-12" ng-if="!ctrl.fullyLoaded">
+      <span class="loader"  style="float: left; margin: 0px 0px 0px 8px;">Loading...</span>
+    </div>
+    <div class="col-xs-12" ng-if="ctrl.fullyLoaded">
+      <div>
+        <strong>Order ID:</strong>
+        <span>{{ctrl.itemFormView.Order_ID}}</span>
+      </div>
+      <div>
+        <strong>Work Order Number:</strong>
+        <span>{{ctrl.itemFormView.WorkOrder_WorkOrderNr}}</span>
+      </div>
+      <div>
+        <strong>Customer Name:</strong>
+        <span>{{ctrl.itemFormView.Customer_CustomerName}}</span>
+      </div>
+      <div>
+        <strong>Work Order Number:</strong>
+        <span>{{ctrl.itemFormView.Customer_WorkCity}}</span>
+      </div>
+      <div>
+        <strong>Work Order Number:</strong>
+        <span>{{ctrl.itemFormView.RPU_Address}}</span>
+      </div>
+      <div>
+        <strong>Work Order Number:</strong>
+        <span>{{ctrl.itemFormView.RPU_City}}</span>
+      </div>
+      <div>
+        <strong>Work Order Number:</strong>
+        <span>{{ctrl.itemFormView.RPU_ZipCode}}</span>
+      </div>
+    </div>
   </div>
   <div class="row">
-    <div>Order ID:</div>
-    <input type="text" name="name" value="{{ctrl.itemFormView.Order_ID}}">
-  </div>
-  <div class="row">
-    <div>Work Order Number:</div>
-    <input type="text" name="name" value="{{ctrl.itemFormView.WorkOrder_WorkOrderNr}}">
-  </div>
-  <div class="row">
-    <div>Customer Name:</div>
-    <input type="text" name="name" value="{{ctrl.itemFormView.Customer_CustomerName}}">
-  </div>
-  <div class="row">
-    <div>Customer Work City:</div>
-    <input type="text" name="name" value="{{ctrl.itemFormView.Customer_WorkCity}}">
-  </div>
-  <div class="row">
-    <div>RPU Address:</div>
-    <input type="text" name="name" value="{{ctrl.itemFormView.RPU_Address}}">
-  </div>
-  <div class="row">
-    <div>RPU Zip Code:</div>
-    <input type="text" name="name" value="{{ctrl.itemFormView.RPU_ZipCode}}">
-  </div>
-  <div class="row">
-    <div>RPU City:</div>
-    <input type="text" name="name" value="{{ctrl.itemFormView.RPU_City}}">
-  </div>
-  <div class="row">
-    <hr>
-  </div>
-  <div class="row">
-    <button class="btn" ng-click="ctrl.closeDialog()">Save</button>
-    <button class="btn" ng-click="ctrl.closeDialog()">Cancel</button>
+    <div class="col-xs-12">
+      <a ng-href="/#/activities">
+        <button class="btn" ng-click="ctrl.closeDialog()">Back to grid</button>
+      </a>
+    </div>
   </div>
 </div>
