--- a/app/assets/javascripts/mohican/directives/mn-grid-pager/template.html
+++ b/app/assets/javascripts/mohican/directives/mn-grid-pager/template.html
@@ -1,5 +1,5 @@
     <nav class="pointer" ng-class="{hidden: !gridPager.owner.pageCount}">
-      <ul class="pointer pagination pagination-sm"
+      <ul class="pagination pagination-sm"
           style="margin: 0px 30px;"
           ng-class="{'client-pager': !!gridPager.owner.stateMachine.filters && gridPager.owner.fullyLoaded}">
         <li class="pointer" ng-class='{disabled: gridPager.owner.stateMachine.page === 1}'>
