--- a/app/assets/javascripts/app/routes/activitiesForm.html
+++ b/app/assets/javascripts/app/routes/activitiesForm.html
@@ -6,31 +6,31 @@
     <div class="col-xs-12" ng-if="ctrl.itemFormView">
       <div>
         <strong>Order ID:</strong>
-        <span>{{ctrl.itemFormView.Order_ID}}</span>
+        <span>{{ctrl.itemForm.Order_ID}}</span>
       </div>
       <div>
         <strong>Work Order Number:</strong>
-        <span>{{ctrl.itemFormView.WorkOrder_WorkOrderNr}}</span>
+        <span>{{ctrl.itemForm.WorkOrder_WorkOrderNr}}</span>
       </div>
       <div>
         <strong>Customer Name:</strong>
-        <span>{{ctrl.itemFormView.Customer_CustomerName}}</span>
+        <span>{{ctrl.itemForm.Customer_CustomerName}}</span>
       </div>
       <div>
         <strong>Work Order Number:</strong>
-        <span>{{ctrl.itemFormView.Customer_WorkCity}}</span>
+        <span>{{ctrl.itemForm.Customer_WorkCity}}</span>
       </div>
       <div>
         <strong>Work Order Number:</strong>
-        <span>{{ctrl.itemFormView.RPU_Address}}</span>
+        <span>{{ctrl.itemForm.RPU_Address}}</span>
       </div>
       <div>
         <strong>Work Order Number:</strong>
-        <span>{{ctrl.itemFormView.RPU_City}}</span>
+        <span>{{ctrl.itemForm.RPU_City}}</span>
       </div>
       <div>
         <strong>Work Order Number:</strong>
-        <span>{{ctrl.itemFormView.RPU_ZipCode}}</span>
+        <span>{{ctrl.itemForm.RPU_ZipCode}}</span>
       </div>
     </div>
   </div>
