grid link to form view
Signed-off-by: Aleksandar Djindjic <djindjic@gmail.com>

--- a/app/assets/javascripts/app/routes/activitiesForm.html
+++ b/app/assets/javascripts/app/routes/activitiesForm.html
@@ -36,8 +36,8 @@
   </div>
   <div class="row">
     <div class="col-xs-12">
-      <a ng-href="/#/activities">
-        <button class="btn" ng-click="ctrl.closeDialog()">Back to grid</button>
+      <a class="btn btn-info" ui-sref="base.activities({})">
+        Back to grid
       </a>
     </div>
   </div>
