loading single document when form requests it
Controller should ask from a service a single document if it is
showing the form view, and service should promise to do it. If the
document requested had previously been eager laoded, service should
immediatlely return, but if it is not loaded, it should laod it as
a special case of 'backend filter'.

Signed-off-by: zeljko <zeljko@z-ware.fi>

--- a/app/assets/javascripts/app/routes/activitiesFormView.html
+++ b/app/assets/javascripts/app/routes/activitiesFormView.html
@@ -1,9 +1,9 @@
 <div class="container-fluid">
   <div class="row">
-    <div class="col-xs-12" ng-if="!ctrl.fullyLoaded">
+    <div class="col-xs-12" ng-if="!ctrl.itemFormView">
       <span class="loader"  style="float: left; margin: 0px 0px 0px 8px;">Loading...</span>
     </div>
-    <div class="col-xs-12" ng-if="ctrl.fullyLoaded">
+    <div class="col-xs-12" ng-if="ctrl.itemFormView">
       <div>
         <strong>Order ID:</strong>
         <span>{{ctrl.itemFormView.Order_ID}}</span>
