--- a/app/assets/javascripts/mohican/directives/mnFilterBar/template.html
+++ b/app/assets/javascripts/mohican/directives/mnFilterBar/template.html
@@ -18,7 +18,7 @@
       <div isteven-multi-select
             class="inline-multi-select filter-bar-dropDown"
             input-model="filterBar.owner.backendFilters"
-            on-item-click="filterBar.owner.getBackendFilters(data.name)"
+            on-item-click="filterBar.owner.getBackendFilter(data.name)"
             output-model="filterBar.outputBrowsers"
             button-label="show"
             item-label="name"
