--- a/app/assets/javascripts/app/routes/activitiesForm.html
+++ b/app/assets/javascripts/app/routes/activitiesForm.html
@@ -36,6 +36,21 @@
   </div>
   <div class="row">
     <div class="col-xs-12">
+      <mn-tabs>
+        <mn-tab heading="Tab 1">
+          tab1
+        </mn-tab>
+        <mn-tab heading="Tab 2">
+          tab2
+        </mn-tab>
+        <mn-tab heading="Tab 3">
+          tab3
+        </mn-tab>
+      </mn-tabs>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-xs-12">
       <a class="btn btn-info" ui-sref="base.activities({})">
         Back to grid
       </a>
