--- a/app/assets/javascripts/app/routes/activitiesForm.html
+++ b/app/assets/javascripts/app/routes/activitiesForm.html
@@ -40,11 +40,12 @@
         <mn-tab heading="Tab 1">
           tab1
         </mn-tab>
-        <mn-tab heading="Tab 2">
-          tab2
+        <mn-tab heading="Handlers">
+          handlers
         </mn-tab>
-        <mn-tab heading="Tab 3">
-          tab3
+        <mn-tab heading="Products">
+          <mn-grid owner="ctrl.CurrentItemProductsController">
+          </mn-grid>
         </mn-tab>
       </mn-tabs>
     </div>
