--- a/app/assets/javascripts/app/routes/activitiesLinkToActivityDialog.html
+++ b/app/assets/javascripts/app/routes/activitiesLinkToActivityDialog.html
@@ -1,1 +1,15 @@
-activity
+<div class="container-fluid">
+  <div class="row">
+    <divs class="col-xs-12">
+      <mn-grid owner="ctrl.linkToActivityController">
+      </mn-grid>
+    </div>
+  </div>
+</div>
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-xs-12">
+      <button class="btn" ng-click="ctrl.closeDialog()">Close</button>
+    </div>
+  </div>
+</div>
