--- a/app/assets/javascripts/mohican/directives/mnGrid/template.html
+++ b/app/assets/javascripts/mohican/directives/mnGrid/template.html
@@ -100,7 +100,7 @@
 </div>
 <div class="row mn-pager-row" >
   <div class="col-xs-12 col-sm-5">
-    <mn-grid-pager ng-hide="grid.onlySelectedItemsShown">
+    <mn-grid-pager owner="grid.owner" ng-hide="grid.onlySelectedItemsShown">
     </mn-grid-pager>
   </div>
   <div class="col-sm-7 hidden-xs mn-content-footer-status-msg">
