--- a/app/assets/javascripts/app/routes/activities-grid.html
+++ b/app/assets/javascripts/app/routes/activities-grid.html
@@ -10,7 +10,7 @@
                mn-select-type="check"
                mn-on-select="ctrl.onItemSelect(selectedItems)"
                mn-popup="ctrl.popup(clickedItem, selectedItems)">
-        <a ui-sref="base.activitiesForm({ itemPrimaryKeyId: item[ctrl.primaryKeyName] })">
+        <a ui-sref="base.activities-form({ itemPrimaryKeyId: item[ctrl.primaryKeyName] })">
           <i class="fa fa-file-text-o fa-2x icoNormal"></i>
         </a>
         <a target="_blank" ng-href="{{ctrl.reportLocation}}/report_{{item.Order_ID}}.pdf">
