grid footer cleanup
Now the footer a bit less breaks the size, but still needs to be
fixed, it cannot fit if selection, QF and limit is there. Maybe lose
words and bring only numbers with a tooltip to explain what is going
on?

Signed-off-by: zeljko <zeljko@z-ware.fi>

--- a/app/assets/javascripts/mohican/directives/mn-grid-pager/template.html
+++ b/app/assets/javascripts/mohican/directives/mn-grid-pager/template.html
@@ -1,6 +1,6 @@
     <nav class="pointer" ng-class="{hidden: !gridPager.owner.pageCount}">
       <ul class="pagination pagination-sm"
-          style="margin: 0px 30px;"
+          style="margin: 0px;"
           ng-class="{'client-pager': !!gridPager.owner.stateMachine.filters && gridPager.owner.fullyLoaded}">
         <li class="pointer" ng-class='{disabled: gridPager.owner.stateMachine.page === 1}'>
           <a ng-click="gridPager._changePage(gridPager.prevPage())"
