add new basic-driver owned grid
Signed-off-by: Aleksandar Djindjic <djindjic@gmail.com>

--- a/app/assets/javascripts/app/routes/activities-form.html
+++ b/app/assets/javascripts/app/routes/activities-form.html
@@ -36,7 +36,8 @@
   		        tab1
   		    </mn-tab>
   		    <mn-tab heading="Handlers">
-  		        handlers
+            <mn-grid owner="ctrl.CurrentItemHandlersController">
+            </mn-grid>
   		    </mn-tab>
   		    <mn-tab heading="Products">
   		      <mn-grid owner="ctrl.CurrentItemProductsController">
