fixed to absolute
Signed-off-by: Aleksandar Djindjic <djindjic@gmail.com>

--- a/app/assets/javascripts/mohican/directives/mn-grid/template.html
+++ b/app/assets/javascripts/mohican/directives/mn-grid/template.html
@@ -67,7 +67,7 @@
     <tbody ng-hide="grid.onlySelectedItemsShown">
       <tr ng-show="grid.owner.items.length === 0">
         <td style="heigth: 0px;">
-          <div style="overflow: visible; position: fixed;">
+          <div style="overflow: visible; position: absolute;">
             No items to show
           </div>
         </td>
@@ -94,7 +94,7 @@
     <tbody ng-show="grid.onlySelectedItemsShown">
       <tr ng-show="grid.selectedItems.length === 0">
         <td style="heigth: 0px;">
-          <div style="overflow: visible; position: fixed;">
+          <div style="overflow: visible; position: absolute;">
             No items to show
           </div>
         </td>
