basicDrv fields defined in page controller
Signed-off-by: Aleksandar Djindjic <djindjic@gmail.com>

--- a/app/assets/javascripts/app/routes/activities-form.html
+++ b/app/assets/javascripts/app/routes/activities-form.html
@@ -36,11 +36,11 @@
               tab1
             </mn-tab>
             <mn-tab heading="Handlers">
-            <mn-grid owner="ctrl.CurrentItemHandlersController">
+            <mn-grid owner="ctrl.handlersDrv">
             </mn-grid>
           </mn-tab>
           <mn-tab heading="Products">
-            <mn-grid owner="ctrl.CurrentItemProductsController">
+            <mn-grid owner="ctrl.productsDrv">
             </mn-grid>
           </mn-tab>
         </mn-tabs>
