grid footer cleanup with glyphicons & tooltips

--- a/app/assets/javascripts/mohican/directives/mn-grid/template.html
+++ b/app/assets/javascripts/mohican/directives/mn-grid/template.html
@@ -129,10 +129,10 @@
   </div>
   <div class="hidden-xs col-sm-5 col-md-6 col-lg-7 mn-content-footer-status-msg">
     <span ng-show="grid.selectedItems.length > 0">
-      <span class="accent0">selected {{grid.selectedItems.length}}</span> /
+      <span class="accent0" title="{{grid.selectedItems.length}} selected">{{grid.selectedItems.length}} <i class="fa fa-check-square-o" /></i> </span> /
     </span>
     <span ng-if="grid.owner.totalQfCount < grid.owner.service.totalCount">
-      <span class="mn-content-footer-status-msg-invert"> {{grid.owner.totalQfCount}}</span> quick filtered, of
+      <span class="mn-content-footer-status-msg-invert" title="{{grid.owner.totalQfCount}} quick filtered"> {{grid.owner.totalQfCount}} <i class="fa fa-filter" /></i> </span> /
     </span>
     <span ng-if="grid.owner.service.totalCount">
       <span ng-if="grid.owner.service.buffer.length < grid.owner.service.totalCount">
@@ -144,6 +144,9 @@
     </span>
     <span ng-if="!(grid.selectedItems.length > 0)">
       loaded {{isObject(grid.owner.service.totalCount)}}
+    </span>
+    <span ng-if="grid.selectedItems.length > 0">
+      <i class="fa fa-list" title="{{grid.owner.service.totalCount}} loaded" /></i>
     </span>
   </div>
 </div>
