more disabled state look for qf if only selected items are shown
Basic general 'disabled' style overriding/adding to the default bootstrap one.
Some additions in angular-multi-select-css, and should be for overall disabled
look of the multi-select dropdown button.

--- a/app/assets/javascripts/mohican/directives/mn-grid/template.html
+++ b/app/assets/javascripts/mohican/directives/mn-grid/template.html
@@ -32,7 +32,7 @@
           <div animate class="filterRowAnimWrap" ng-show="grid.owner.stateMachine.quickFilterShown && grid.owner.fullyLoaded">
           </div>
         </th>
-        <th ng-repeat="field in grid.owner.fields" class="QfRow">
+        <th ng-repeat="field in grid.owner.fields" class="QfRow" ng-class="{'disabled' : grid.onlySelectedItemsShown}">
           <div animate class="filterRowAnimWrap" ng-show="grid.owner.stateMachine.quickFilterShown && grid.owner.fullyLoaded">
             <mn-qf-text
                   qf-disabled="grid.onlySelectedItemsShown"
