--- a/app/assets/javascripts/mohican/directives/mn-grid/template.html
+++ b/app/assets/javascripts/mohican/directives/mn-grid/template.html
@@ -34,24 +34,26 @@
         </th>
         <th ng-repeat="field in grid.owner.fields" class="QfRow" ng-class="{'disabled' : grid.onlySelectedItemsShown}">
           <div animate class="filterRowAnimWrap" ng-show="grid.owner.stateMachine.quickFilterShown && grid.owner.fullyLoaded">
-            <mn-qf-text
-                  qf-disabled="grid.onlySelectedItemsShown"
-                  ng-if="field.quickfilter === 'text'"
-                  model="grid.owner.stateMachine.filters[field.name]"
-                  qf-changed="grid.filterBy(fieldName)"
-                  field="field"></mn-qf-text>
-            <mn-qf-date-range
-                  qf-disabled="grid.onlySelectedItemsShown"
-                  ng-if="field.quickfilter === 'date-range'"
-                  model="grid.owner.stateMachine.filters[field.name]"
-                  qf-changed="grid.filterBy(fieldName)"
-                  field="field"></mn-qf-date-range>
-            <mn-qf-select
-                  qf-disabled="grid.onlySelectedItemsShown"
-                  ng-if="field.quickfilter === 'select'"
-                  model="grid.owner.stateMachine.filters[field.name]"
-                  qf-changed="grid.filterBy(fieldName)"
-                  field="field"></mn-qf-select>
+            <div class="filterFieldBgWrap" ng-if="field.quickfilter === 'text' || field.quickfilter === 'date-range'">
+              <mn-qf-text
+                    qf-disabled="grid.onlySelectedItemsShown"
+                    ng-if="field.quickfilter === 'text'"
+                    model="grid.owner.stateMachine.filters[field.name]"
+                    qf-changed="grid.filterBy(fieldName)"
+                    field="field"></mn-qf-text>
+              <mn-qf-date-range
+                    qf-disabled="grid.onlySelectedItemsShown"
+                    ng-if="field.quickfilter === 'date-range'"
+                    model="grid.owner.stateMachine.filters[field.name]"
+                    qf-changed="grid.filterBy(fieldName)"
+                    field="field"></mn-qf-date-range>
+            </div>
+              <mn-qf-select
+                    qf-disabled="grid.onlySelectedItemsShown"
+                    ng-if="field.quickfilter === 'select'"
+                    model="grid.owner.stateMachine.filters[field.name]"
+                    qf-changed="grid.filterBy(fieldName)"
+                    field="field"></mn-qf-select>
           </div>
         </th>
         <th class="QfRow">
@@ -73,8 +75,8 @@
         </td>
       </tr>
       <tr ng-repeat="item in grid.owner.items"
-          mn-right-click="grid.rightClick(item, $event)"
-          ng-class="{'last-selected': grid.isLastSelected(item)}">
+-          mn-right-click="grid.rightClick(item, $event)"
+-          ng-class="{'last-selected': grid.isLastSelected(item)}">
         <td ng-show="grid.showSelectColumn">
           <input type="checkbox" class="baseFont3x"
                  ng-checked="grid.isItemSelected(item)"
@@ -132,7 +134,7 @@
       <span class="accent0" title="{{grid.selectedItems.length}} selected">{{grid.selectedItems.length}} <i class="fa fa-check-square-o" /></i> </span> /
     </span>
     <span ng-if="grid.owner.totalQfCount < grid.owner.service.totalCount">
-      <span class="mn-content-footer-status-msg-invert" title="{{grid.owner.totalQfCount}} quick filtered"> {{grid.owner.totalQfCount}} <i class="fa fa-filter" /></i> </span> /
+      <span class="mn-content-footer-status-msg-invert" title="{{grid.owner.totalQfCount}} quick filtered"> {{grid.owner.totalQfCount}} <i class="glyphicon glyphicon-filter baseFont1_5x"></i> </span> /
     </span>
     <span ng-if="grid.owner.service.totalCount">
       <span ng-if="grid.owner.service.buffer.length < grid.owner.service.totalCount">
@@ -150,6 +152,9 @@
     </span>
   </div>
 </div>
+<!-- <div>
+  <a ng-show="grid.selectedItems.length > 0" ng-click="grid.unselectAll()">unselect all</a>
+</div> -->
 <div class="btn-group-vertical mn-context-menu"
      role="group"
      ng-show="grid.contextMenuVisible"
