--- a/app/assets/javascripts/app/routes/activities-form.html
+++ b/app/assets/javascripts/app/routes/activities-form.html
@@ -3,39 +3,27 @@
     <div class="col-xs-12 col-sm-6 mn-content-panel">
       <span class="loader block" ng-if="!ctrl.itemForm" style="margin: 0px 0px 0px 8px;">Loading...</span>
       <div ng-if="ctrl.itemForm">
-        <div>
-          <strong>Order ID:</strong>
-          <span>{{ctrl.itemForm.Order_ID}}</span>
-        </div>
-        <div>
-          <strong>Work Order Number:</strong>
-          <span>{{ctrl.itemForm.WorkOrder_WorkOrderNr}}</span>
-        </div>
-        <div>
-          <strong>Customer Name:</strong>
-          <span>{{ctrl.itemForm.Customer_CustomerName}}</span>
-        </div>
-        <div>
-          <strong>Work Order Number:</strong>
-          <span>{{ctrl.itemForm.Customer_WorkCity}}</span>
-        </div>
-        <div>
-          <strong>Work Order Number:</strong>
-          <span>{{ctrl.itemForm.RPU_Address}}</span>
-        </div>
-        <div>
-          <strong>Work Order Number:</strong>
-          <span>{{ctrl.itemForm.RPU_City}}</span>
-        </div>
-        <div>
-          <strong>Work Order Number:</strong>
-          <span>{{ctrl.itemForm.RPU_ZipCode}}</span>
-        </div>
-          <mn-tabs>
-            <mn-tab heading="Tab 1">
-              tab1
-            </mn-tab>
-            <mn-tab heading="Handlers">
+        <mnf-form mnf-doc="ctrl.itemForm">
+          <mnf-text mnf-field="Order_ID"
+                    mnf-label="Order ID:"></mnf-text>
+          <mnf-text mnf-field="WorkOrder_WorkOrderNr"
+                    mnf-label="Work Order Number:"></mnf-text>
+          <mnf-text mnf-field="Customer_CustomerName"
+                    mnf-label="Customer Name:"></mnf-text>
+          <mnf-text mnf-field="Customer_WorkCity"
+                    mnf-label="Customer Work City:"></mnf-text>
+          <mnf-text mnf-field="RPU_Address"
+                    mnf-label="RPU Address:"></mnf-text>
+          <mnf-text mnf-field="RPU_City"
+                    mnf-label="RPU City:"></mnf-text>
+          <mnf-text mnf-field="RPU_ZipCode"
+                    mnf-label="RPU Zip Code:"></mnf-text>
+        </mnf-form>
+        <mn-tabs>
+          <mn-tab heading="Tab 1">
+            tab1
+          </mn-tab>
+          <mn-tab heading="Handlers">
             <mn-grid owner="ctrl.handlersDrv">
             </mn-grid>
           </mn-tab>
