mnf-form buttons
Signed-off-by: Aleksandar Djindjic <djindjic@gmail.com>

--- a/app/assets/javascripts/mohican/directives/mnf-form/template.html
+++ b/app/assets/javascripts/mohican/directives/mnf-form/template.html
@@ -1,2 +1,6 @@
+<mnf-edit></mnf-edit>
+<mnf-commit></mnf-commit>
+<mnf-rollback></mnf-rollback>
+<mnf-delete></mnf-delete>
 <ng-transclude>
 </ng-transclude>
