basic crud buttons layout
Signed-off-by: Aleksandar Djindjic <djindjic@gmail.com>

--- a/app/assets/javascripts/mohican/directives/mnf-commit/template.html
+++ b/app/assets/javascripts/mohican/directives/mnf-commit/template.html
@@ -1,1 +1,1 @@
-<button type="button" name="button">save</button>
+<button type="button" ng-if="mnfDoc._state === 'changed'" name="button" ng-click="mnfDoc.commit()">save</button>
