--- a/app/assets/javascripts/mohican/directives/mnf-rollback/template.html
+++ b/app/assets/javascripts/mohican/directives/mnf-rollback/template.html
@@ -1,1 +1,1 @@
-<button type="button" name="button">cancel</button>
+<button type="button" ng-if="mnfDoc._state === 'changed'" name="button" ng-click="mnfDoc.rollback()">cancel</button>
