--- a/app/assets/javascripts/mohican/directives/mnf-text/template.html
+++ b/app/assets/javascripts/mohican/directives/mnf-text/template.html
@@ -4,7 +4,7 @@
 </div>
 <div ng-if="mnfDoc._state === 'editing' || mnfDoc._state === 'changed'">
   <strong>{{mnfLabel}}</strong>
-  {{mnfDoc[scope.mnfField + '_changed']}}
+  {{mnfDoc[mnfField + '_changed']}}
   <input type="text"
          ng-model="mnfDoc._edit[mnfField]"
          ng-change="textChanged()"
