form buttons behavior by document state
Signed-off-by: Aleksandar Djindjic <djindjic@gmail.com>

--- a/app/assets/javascripts/app/routes/activities-form.html
+++ b/app/assets/javascripts/app/routes/activities-form.html
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col-xs-12 col-sm-6 mn-content-panel">
       <span class="loader block" ng-if="!ctrl.itemForm" style="margin: 0px 0px 0px 8px;">Loading...</span>
-      <div ng-if="ctrl.itemForm">
+      <div ng-if="ctrl.itemForm" class="container-fluid">
         <mnf-form mnf-doc="ctrl.itemForm">
           <mnf-text mnf-field="Order_ID"
                     mnf-label="Order ID:"></mnf-text>
