--- a/app/assets/javascripts/mohican/directives/mnf-edit/template.html
+++ b/app/assets/javascripts/mohican/directives/mnf-edit/template.html
@@ -1,1 +1,2 @@
-<button type="button" name="button" ng-click="mnfDoc.edit()">edit</button>
+<button ng-if="mnfDoc._state === 'ready'"
+        ng-click="mnfDoc.edit()">edit</button>
