--- a/app/assets/javascripts/app/routes/activities-link-to-activity-dialog.html
+++ b/app/assets/javascripts/app/routes/activities-link-to-activity-dialog.html
@@ -1,6 +1,6 @@
 <div class="container-fluid">
   <div class="row">
-    <divs class="col-xs-12">
+    <div class="col-xs-12">
       <mn-grid owner="ctrl.linkToActivityController">
       </mn-grid>
     </div>
