--- a/app/assets/javascripts/mohican/directives/mnf-text/template.html
+++ b/app/assets/javascripts/mohican/directives/mnf-text/template.html
@@ -9,5 +9,5 @@
   <input type="text"
          ng-model="mnfDoc._edit[mnfField]"
          ng-change="textChanged()"
-         ng-class="{'changed': mnfDoc[mnfField + '_changed']}"></input>
+         ng-class="{'changed': mnfDoc['_' + mnfField + '_changed']}"></input>
 </div>
