--- a/app/assets/javascripts/app/routes/activities-form.html
+++ b/app/assets/javascripts/app/routes/activities-form.html
@@ -4,8 +4,10 @@
       <span class="loader block" ng-if="!ctrl.itemForm" style="margin: 0px 0px 0px 8px;">Loading...</span>
       <div ng-if="ctrl.itemForm" class="container-fluid">
         <mnf-form mnf-doc="ctrl.itemForm">
-          <mnf-text mnf-field="Order_ID"
-                    mnf-label="Order ID:"></mnf-text>
+          <div class="col-xs-12">
+            <strong class="col-xs-5">Order ID</strong>
+            <span>{{ctrl.itemForm.Order_ID}}</span>
+          </div>
           <mnf-text mnf-field="WorkOrder_WorkOrderNr"
                     mnf-label="Work Order Number:"></mnf-text>
           <mnf-text mnf-field="Customer_CustomerName"
