--- a/app/assets/javascripts/mohican/directives/mn-view-field/template.html
+++ b/app/assets/javascripts/mohican/directives/mn-view-field/template.html
@@ -1,5 +1,5 @@
 <div ng-style="{width: viewField.field.width + 'px'}" style="overflow: hidden">
   <span>
-    {{viewField.model[viewField.field.name + '_formatted']}}
+    {{viewField.model['_' + viewField.field.name + '_formatted']}}
   </span>
 </div>
