--- a/app/assets/javascripts/mohican/directives/mn-filter-bar/template.html
+++ b/app/assets/javascripts/mohican/directives/mn-filter-bar/template.html
@@ -38,7 +38,7 @@
               btn-checkbox-false="false"
               ng-disabled="!filterBar.owner.fullyLoaded">
         <span style="float: left;">Quick Filter</span>
-        <span class="loader" ng-show="!filterBar.owner.fullyLoaded" style="float: left; margin: 0px 0px 0px 8px;">Loading...</span>
+        <span class="loader" ng-show="!filterBar.owner.fullyLoaded" style="float: left; margin: 0px 0px 0px 8px;"></span>
       </button>
     </div>
     <div class="alert alert-warning filter-bar-item filter-bar-alert"
