--- a/app/assets/javascripts/mohican/directives/mnf-delete/template.html
+++ b/app/assets/javascripts/mohican/directives/mnf-delete/template.html
@@ -1,2 +1,4 @@
-<button ng-click="mnfDoc.delete()"
+<button class="btn btn-danger"
+        ng-disabled="mnfDoc._state === 'committing'"
+        ng-click="mnfDoc.delete()"
         ng-if="mnfDoc._state !== 'deleted'">delete</button>
