--- a/app/assets/javascripts/mohican/directives/mnf-edit/template.html
+++ b/app/assets/javascripts/mohican/directives/mnf-edit/template.html
@@ -1,2 +1,3 @@
-<button ng-if="mnfDoc._state === 'ready'"
+<button class="btn btn-primary"
+        ng-if="mnfDoc._state === 'ready'"
         ng-click="mnfDoc.edit()">edit</button>
