--- a/app/assets/javascripts/mohican/directives/mnf-form/template.html
+++ b/app/assets/javascripts/mohican/directives/mnf-form/template.html
@@ -8,5 +8,7 @@
      class="col-xs-12">
   <strong class="col-xs-5">document is deleted</strong>
 </div>
-<ng-transclude>
-</ng-transclude>
+<form class="form-horizontal">
+  <ng-transclude>
+  </ng-transclude>
+</form>
