--- a/app/assets/javascripts/mohican/directives/mnf-form/template.html
+++ b/app/assets/javascripts/mohican/directives/mnf-form/template.html
@@ -1,4 +1,4 @@
-<div class="col-xs-12">
+<div class="col-xs-12 mn-buttons-group">
   <mnf-edit></mnf-edit>
   <mnf-commit></mnf-commit>
   <mnf-rollback></mnf-rollback>
