RPL name in form - testing grid fields
Signed-off-by: Aleksandar Djindjic <djindjic@gmail.com>

--- a/app/assets/javascripts/app/routes/activities-form.html
+++ b/app/assets/javascripts/app/routes/activities-form.html
@@ -8,6 +8,8 @@
                     mnf-label="Work Order Number:"></mnf-text>
           <mnf-text mnf-field="Customer_CustomerName"
                     mnf-label="Customer Name:"></mnf-text>
+          <mnf-text mnf-field="RPL_Name"
+                    mnf-label="RPL Name:"></mnf-text>
           <mnf-text mnf-field="Customer_WorkCity"
                     mnf-label="Customer Work City:"></mnf-text>
           <mnf-text mnf-field="RPU_Address"
