--- a/app/assets/javascripts/mohican/directives/mnf-text/template.html
+++ b/app/assets/javascripts/mohican/directives/mnf-text/template.html
@@ -1,7 +1,7 @@
 <div ng-if="mnfDoc._state === 'ready'"
      class="form-group form-group-sm mn-form-group">
   <label class="col-sm-4 control-label" for="formGroupInputLarge">{{mnfLabel}}</label>
-  <div class="col-sm-8" style="height: 30px; padding-left: 26px; padding-top: 5px; padding-bottom: 5px;">
+  <div class="col-sm-8 state-ready-field-value">
     <span>{{mnfDoc[mnfField]}}</span>
   </div>
 </div>
