--- a/app/assets/javascripts/mohican/directives/mnf-delete/template.html
+++ b/app/assets/javascripts/mohican/directives/mnf-delete/template.html
@@ -1,4 +1,4 @@
 <button class="btn btn-danger"
-        ng-disabled="mnfDoc._state === 'committing'"
-        ng-click="mnfDoc.delete()"
-        ng-if="mnfDoc._state !== 'deleted'">delete</button>
+        ng-disabled="mnfDoc._state === 'deleting'"
+        ng-if="mnfDoc._state === 'ready' || mnfDoc._state === 'deleting'"
+        ng-click="mnfDoc.delete()">delete</button>
