--- a/app/assets/javascripts/mohican/directives/mnf-text/template.html
+++ b/app/assets/javascripts/mohican/directives/mnf-text/template.html
@@ -1,4 +1,4 @@
-<div ng-if="mnfDoc._state === 'ready'"
+<div ng-if="mnfDoc._state === 'ready' || mnfDoc._state === 'deleting'"
      class="form-group form-group-sm mn-form-group">
   <label class="col-sm-4 control-label" for="formGroupInputLarge">{{mnfLabel}}</label>
   <div class="col-sm-8 state-ready-field-value">
