--- a/app/assets/javascripts/mohican/directives/mnf-delete/template.html
+++ b/app/assets/javascripts/mohican/directives/mnf-delete/template.html
@@ -1,4 +1,10 @@
 <button class="btn btn-danger"
         ng-disabled="mnfDoc._state === 'deleting'"
         ng-if="mnfDoc._state === 'ready' || mnfDoc._state === 'deleting'"
-        ng-click="mnfDoc.delete()">delete</button>
+        ng-click="mnfDoc.delete()">
+  <span ng-style="mnfDoc._state === 'deleting' ? {float: 'left'} : {}">delete</span>
+  <span class="loader"
+        ng-show="mnfDoc._state === 'deleting'"
+        style="float: left; margin: 0px 0px 0px 8px;">
+  </span>
+</button>
