product route in mohican - grid view
Added Product route into Mohican demo app and added all needed
changes to that the grid shows well.

Signed-off-by: zeljko <zeljko@z-ware.fi>

--- a/app/assets/javascripts/app/menu.html
+++ b/app/assets/javascripts/app/menu.html
@@ -12,9 +12,12 @@
       <mn-menu-item>
         <mn-menu-item-route>Start</mn-menu-item-route>
       </mn-menu-item>
-      <mn-menu-group mn-text="Deliveries and Transitions">
+      <mn-menu-group mn-text="Manage Resources">
         <mn-menu-group-item>
           <mn-menu-item-route>Activities</mn-menu-item-route>
+        </mn-menu-group-item>
+        <mn-menu-group-item>
+          <mn-menu-item-route>Products</mn-menu-item-route>
         </mn-menu-group-item>
       </mn-menu-group>
     </mn-navbar-collapsible-left>
