--- a/app/assets/javascripts/mohican/directives/mn-qf-text/template.html
+++ b/app/assets/javascripts/mohican/directives/mn-qf-text/template.html
@@ -2,6 +2,6 @@
        type="text"
        ng-model="qfText.model"
        ng-change="qfText.inputChanged()"
-       ng-style="{width: (qfText.field.width) + 'px'}"
+       ng-style="{width: (qfText.field.width - 3) + 'px'}"
        style="height: 34px;"
        class="form-control" />
